# catholic-bible

./: .buildinfo  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: environment.pickle  index.doctree
.doctrees/catholic_bible/: constants.doctree  models.doctree  usccb.doctree
.github/workflows/: ci.yml  docs.yml  python-publish.yml
_sources/: index.rst.txt
_sources/catholic_bible/: constants.rst.txt  models.rst.txt  usccb.rst.txt
catholic_bible/: __init__.py  __main__.py  constants.html  constants.py  errors.py  models.html  models.py  usccb.html  usccb.py  utils.py
catholic_bible/commands/: __init__.py  bible.py  common.py
docs/source/: conf.py
docs/superpowers/plans/: 2026-03-24-cross-reference-parsing.md  2026-03-25-download-bible.md  2026-04-28-cli-improvements.md
docs/superpowers/specs/: 2026-03-24-cross-reference-parsing-design.md  2026-03-25-download-bible-design.md  2026-04-28-cli-improvements-design.md
tests/: test_commands.py  test_constants.py  test_errors.py  test_models.py  test_usccb.py  test_utils.py
tests/data/: genesis-chapter-1.html  genesis-chapter-1.json
